--- a/build.gradle
+++ b/build.gradle
@@ -1,3 +1,7 @@
+plugins {
+    id 'ru.vyarus.quality' version '2.4.0'
+}
+
 group 'com.waverleysoftware'
 version '0.0.1'
 
@@ -10,7 +14,12 @@ repositories {
 }
 
 dependencies {
-    compile ('org.testng:testng:6.12')
+    compile ('org.testng:testng:6.12',
+    'io.github.sskorol:test-data-supplier:1.3.0',
+            'org.projectlombok:lombok:1.16.18',
+            'org.assertj:assertj-core:3.8.0',
+            'com.google.code.gson:gson:2.8.2'
+    )
 }
 task wrapper(type:Wrapper){
     gradleVersion '4.2.1'
@@ -18,6 +27,10 @@ task wrapper(type:Wrapper){
 
 test {
     useTestNG() {
+        listeners << 'io.github.sskorol.core.DataProviderTransformer'
+        listeners << 'com.waverleysoftware.listeners.TestListener'
         suites 'src/test/resources/smoke-suite.xml'
+
+
     }
 }
